--- a/Version7.0/user21/List.html
+++ b/Version7.0/user21/List.html
@@ -64,6 +64,8 @@
                     <a href="music.html" class="nav-item nav-link " tabindex="-1">Music</a>
                     <a href="List.html" class="nav-item nav-link active" tabindex="-2">Lists</a>
                     <a href="AboutMe.html" class="nav-item nav-link">About Me</a>
+                    <a href="wheresMyStudent.html" class="nav-item nav-link">Hall Pass</a>
+                    <a href="Ebay copy.php" class="nav-item nav-link">Ebay</a>
                     <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link disabled" tabindex="-2">Contact</a>
                     <!----------------------------------^ Edit These Items in your Menu ^ ------------->
                 </div>
