--- a/Version7.0/user21/List.html
+++ b/Version7.0/user21/List.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Riley's Favorite Foods and Resurants">
+    <meta name="5.4 Final Project" content="Riley's Favorite Foods and Resurants">
 
     <title>Web Dev User #21 </title>
 
