--- a/Version7.0/user21/Script.html
+++ b/Version7.0/user21/Script.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Riley's JavaScript Games">
+    <meta name="5.4 Final Project" content="Riley's JavaScript Games">
 
     <title>Web Dev User #21 </title>
 
