--- a/Version7.0/user21/music.html
+++ b/Version7.0/user21/music.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="2.5 Bringing it All together" content="Riley's Music">
+    <meta name="5.4 Final Project" content="Riley's Music">
 
     <title>Web Dev User #21 </title>
 
