--- a/Version7.0/user21/index.html
+++ b/Version7.0/user21/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<!--Version 7.0 
+<!--Version 9.0 
 	Name:
 	Date Completed:
     -->
@@ -81,7 +81,7 @@
                     <a href="List.html" class="nav-item nav-link" tabindex="-1">Lists</a>
                     <a href="AboutMe.html" class="nav-item nav-link">About Me</a>
                     <a href="wheresMyStudent.html" class="nav-item nav-link">Hall Pass</a>
-                     <a href="Ebay copy.php" class="nav-item nav-link">Ebay</a>
+                     <a href="Ebay.php" class="nav-item nav-link">Ebay</a>
                     <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link" tabindex="-2">Contacts</a>
                     <!----------------------------------^ Edit These Items in your Menu ^ ------------->
                 </div>
@@ -103,7 +103,7 @@
 
 
     <div class='col-lg=4'>
-        <img src="https://d38trduahtodj3.cloudfront.net/images.ashx?t=ig&rid=DickinsonCVB&i=pizza_ranch(1).jpg&w=330&h=330&cropbox=1&cropboxhpos=center&stf=1" height=150pxS>
+        <img src="https://d38trduahtodj3.cloudfront.net/images.ashx?t=ig&rid=DickinsonCVB&i=pizza_ranch(1).jpg&w=330&h=330&cropbox=1&cropboxhpos=center&stf=1" height=200pxS>
         You'll be sitting on the toilet afterwards
 
     </div>
