--- a/Version9.0/user21/music.html
+++ b/Version9.0/user21/music.html
@@ -99,7 +99,7 @@
                         <a href="List.html" class="nav-item nav-link" tabindex="-1">Lists</a>
                         <a href="AboutMe.html" class="nav-item nav-link">About Me</a>
                         <a href="wheresMyStudent.html" class="nav-item nav-link">Hall Pass</a>
-                        <a href="Ebay.php" class="nav-item nav-link">Ebay</a>
+                        <a href="Ebay copy.php" class="nav-item nav-link">Ebay</a>
                         <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link" tabindex="-2">Contact</a>
                         <!----------------------------------^ Edit These Items in your Menu ^ ------------->
                     </div>
@@ -172,7 +172,7 @@
                 </table>
             </div>
             <div class='col-md=6'>
-                <img src="https://cdn.apartmenttherapy.info/image/fetch/f_auto,q_auto:eco,c_fit,w_760/https%3A%2F%2Fstorage.googleapis.com%2Fgen-atmedia%2F3%2F2019%2F01%2F4d4764df3d39aaa67d86030a90de8df5382087c7.jpeg" height=200px>
+                <img src="https://cdn.apartmenttherapy.info/image/fetch/f_auto,q_auto:eco,c_fit,w_760/https%3A%2F%2Fstorage.googleapis.com%2Fgen-atmedia%2F3%2F2019%2F01%2F4d4764df3d39aaa67d86030a90de8df5382087c7.jpeg" height=150px>
                 Tastfull and Delicious muffins that will make you cry out for more
             </div>
 
