--- a/Version7.0/user21/AboutMe.html
+++ b/Version7.0/user21/AboutMe.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<!--Version 7.0 
+<!--Version 9.0 
 	Name:
 	Date Completed:
     -->
@@ -72,7 +72,7 @@
                     <a href="List.html" class="nav-item nav-link" tabindex="-1">Lists</a>
                     <a href="AboutMe.html" class="nav-item nav-link active">About Me</a>
                     <a href="wheresMyStudent.html" class="nav-item nav-link">Hall Pass</a>
-                    <a href="Ebay copy.php" class="nav-item nav-link">Ebay</a>
+                    <a href="Ebay.php" class="nav-item nav-link">Ebay</a>
                     <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link" tabindex="-2">Contacts</a>
                     <!----------------------------------^ Edit These Items in your Menu ^ ------------->
                 </div>
