--- a/Version9.0/user21/AboutMe.html
+++ b/Version9.0/user21/AboutMe.html
@@ -5,7 +5,7 @@
     -->
 
 <head>
-    <title>Riley's Amazing Webpage</title>
+
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,23 +44,14 @@
         }
 
     </style>
-    <style>
-        p {
-            padding: 20px;
-            font: 20px sans-serif;
-            background: khaki;
-        }
-
-    </style>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
-        $(document).ready(function() {
-            $("p").click(function() {
-                $(this).slideUp();
-            });
+        $(function() {
+            $("#accordion").accordion();
         });
 
     </script>
-
 </head>
 
 <body>
@@ -75,13 +66,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
                     <!---------------------------------- Edit These Items in your Menu ------------->
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="Script.html" class="nav-item nav-link">Games</a>
                     <a href="music.html" class="nav-item nav-link" tabindex="-1">Music</a>
                     <a href="List.html" class="nav-item nav-link" tabindex="-1">Lists</a>
-                    <a href="AboutMe.html" class="nav-item nav-link">About Me</a>
+                    <a href="AboutMe.html" class="nav-item nav-link active">About Me</a>
                     <a href="wheresMyStudent.html" class="nav-item nav-link">Hall Pass</a>
-                     <a href="Ebay.php" class="nav-item nav-link">Ebay</a>
+                    <a href="Ebay.php" class="nav-item nav-link">Ebay</a>
                     <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link" tabindex="-2">Contacts</a>
                     <!----------------------------------^ Edit These Items in your Menu ^ ------------->
                 </div>
@@ -92,21 +83,43 @@
         </nav>
     </div>
 
-    <center>Riley's Amazing Webpage</center>
+    <center>Who is Riley?</center>
 
-    <div class='col-md=13'>
-        <p>Click on me and see what happens</p>
-        <p>I am a magician and I can make all of your dreams disappear</p>
-        <p>I bet that you won't click on me</p>
 
+    <div id="accordion">
+        <h3>What is Riley?</h3>
+        <div>
+            <p>
+                Riley is awesome!
+            </p>
+        </div>
+        <h3>What does Riley want?</h3>
+        <div>
+            <p>
+                Riley is hungry
+            </p>
+        </div>
+        <h3>What is Riley doing?</h3>
+        <div>
+            <p>
+                Riley eat food
+            </p>
+
+        </div>
+        <h3>How does Riley feel?</h3>
+        <div>
+            <p>
+                Food good!
+            </p>
+
+        </div>
     </div>
 
 
-    <div class='col-lg=4'>
-        <img src="https://d38trduahtodj3.cloudfront.net/images.ashx?t=ig&rid=DickinsonCVB&i=pizza_ranch(1).jpg&w=330&h=330&cropbox=1&cropboxhpos=center&stf=1" height=200pxS>
-        You'll be sitting on the toilet afterwards
 
-    </div>
+
+
+
 
     <body>
 
