--- a/Version9.0/user21/AboutMe.html
+++ b/Version9.0/user21/AboutMe.html
@@ -45,7 +45,7 @@
 
     </style>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         $(function() {
             $("#accordion").accordion();
@@ -66,13 +66,12 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
                     <!---------------------------------- Edit These Items in your Menu ------------->
-                    <a href="index.html" class="nav-item nav-link">Home</a>
+                    <a href="index.php" class="nav-item nav-link">Home</a>
                     <a href="Script.html" class="nav-item nav-link">Games</a>
                     <a href="music.html" class="nav-item nav-link" tabindex="-1">Music</a>
                     <a href="List.html" class="nav-item nav-link" tabindex="-1">Lists</a>
                     <a href="AboutMe.html" class="nav-item nav-link active">About Me</a>
                     <a href="wheresMyStudent.html" class="nav-item nav-link">Hall Pass</a>
-                    <a href="Ebay.php" class="nav-item nav-link">Ebay</a>
                     <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link" tabindex="-2">Contacts</a>
                     <!----------------------------------^ Edit These Items in your Menu ^ ------------->
                 </div>
@@ -123,4 +122,4 @@
 
     <body>
 
-<html>
+        <html>
