--- a/Version9.0/user21/music.html
+++ b/Version9.0/user21/music.html
@@ -93,13 +93,12 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
                         <!---------------------------------- Edit These Items in your Menu ------------->
-                        <a href="index.html" class="nav-item nav-link">Home</a>
+                        <a href="index.php" class="nav-item nav-link">Home</a>
                         <a href="Script.html" class="nav-item nav-link">Games</a>
                         <a href="music.html" class="nav-item nav-link active" tabindex="-1">Music</a>
                         <a href="List.html" class="nav-item nav-link" tabindex="-1">Lists</a>
                         <a href="AboutMe.html" class="nav-item nav-link">About Me</a>
                         <a href="wheresMyStudent.html" class="nav-item nav-link">Hall Pass</a>
-                        <a href="Ebay copy.php" class="nav-item nav-link">Ebay</a>
                         <a href="mailto:sample@gmail.com?Subject=Hello" class="nav-item nav-link" tabindex="-2">Contact</a>
                         <!----------------------------------^ Edit These Items in your Menu ^ ------------->
                     </div>
@@ -183,6 +182,6 @@
             </p>
 
 
-    <body>
+<body>
 
     <html>
